--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,8 +2,10 @@
 
 <% @cocktails.each do |cocktail|%>
  <div class="cocktail-text">
-   <h3><%= cocktail.name %></h3>
+    <h3><%= link_to cocktail.name, cocktail_path(cocktail.id) %></h3>
  </div>
 <% end %>
+
+<%= link_to "Add a new cocktail", new_cocktail_path %>
 
 
