--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,8 @@
-<%= @cocktail.name %>
-<%= @cocktail.doses %> <%# have to iterate, since @cocktails.doses is an array %>
-<%# also have to put a button here, to see if the client wants to add another dose %>
+<h1><%= @cocktail.name %></h1>
+<% @cocktail.doses.each do |dose| %>
+<h6><%= dose.description %> <%= dose.ingredient.name %></h6>
+<% end %>
+
+<%= link_to "Add a new dose", new_cocktail_dose_path(@cocktail) %>
+<%= link_to "Go back to all cocktails", cocktails_path %>
 
